WP-288 fix overlapping elements on import standards page and two checkboxes displaying on standards list

--- a/css/admin.css
+++ b/css/admin.css
@@ -332,3 +332,5 @@ li.was_sbstndard a.was_stndrd_prefix { margin-right: 5px;}
 .was_preloader_wrapper {position: fixed;top: 0px;left: 0px;width: 100%;min-width: 100%;height: 100%;min-height: 100%;background-color: rgba(0,0,0,0.5);z-index: 9990;}
 .was_preloader_wrapper_table {display: table;max-width: 75px;height: 100%;min-height: 100%;margin: 0px auto;padding: 20px 0px;}
 .was_preloader_wrapper_cell {display: table-cell;vertical-align: middle;}
+#importAcademicStandards { margin-bottom:30px; }
+.oer-import-row .hidden { display:none; }
